Update debug args

--- a/src/MalsMerger/Properties/launchSettings.json
+++ b/src/MalsMerger/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
     "MalsMerger": {
-      "commandName": "Project",
-      "commandLineArgs": "\"D:\\bin\\MalsMerger\\mod_a|D:\\bin\\MalsMerger\\mod_b\" \"D:\\bin\\MalsMerger\\mod_final\" -l D:\\bin\\MalsMerger\\output.log -v true"
+        "commandName": "Project",
+        "commandLineArgs": "\"D:\\bin\\MalsMerger\\mod_a|D:\\bin\\MalsMerger\\mod_b|D:\\bin\\MalsMerger\\mod_c|D:\\bin\\MalsMerger\\mod_d|D:\\bin\\MalsMerger\\mod_e\" \"D:\\bin\\MalsMerger\\mod_final\" -l D:\\bin\\MalsMerger\\output.log -v true"
     }
   }
 }
