--- a/src/MalsMerger.Core/MalsMerger.Core.csproj
+++ b/src/MalsMerger.Core/MalsMerger.Core.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MessageStudio.Core" Version="0.1.0-beta" />
+    <PackageReference Include="MessageStudio" Version="0.2.1-beta" />
     <PackageReference Include="SarcLibrary" Version="2.0.2" />
     <PackageReference Include="Standart.Hash.xxHash" Version="4.0.5" />
     <PackageReference Include="ZstdSharp.Port" Version="0.7.4" />
