Rewrite everything and add changelog generation

--- a/src/MalsMerger.Core/MalsMerger.Core.csproj
+++ b/src/MalsMerger.Core/MalsMerger.Core.csproj
@@ -5,6 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MessageStudio" Version="0.2.1-beta" />
