--- a/src/MalsMerger.Core/MalsMerger.Core.csproj
+++ b/src/MalsMerger.Core/MalsMerger.Core.csproj
@@ -12,8 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="MessageStudio" Version="1.0.5" />
+    <PackageReference Include="Revrs" Version="1.0.5" />
     <PackageReference Include="SarcLibrary" Version="3.1.1" />
     <PackageReference Include="Standart.Hash.xxHash" Version="4.0.5" />
+    <PackageReference Include="Totk.Common" Version="1.1.1" />
     <PackageReference Include="ZstdSharp.Port" Version="0.7.6" />
   </ItemGroup>
 
