--- a/src/MalsMerger.Core/MalsMerger.Core.csproj
+++ b/src/MalsMerger.Core/MalsMerger.Core.csproj
@@ -11,11 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MessageStudio" Version="1.0.5" />
+    <PackageReference Include="MessageStudio" Version="1.0.7" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.0" />
     <PackageReference Include="Revrs" Version="1.0.5" />
-    <PackageReference Include="SarcLibrary" Version="3.1.1" />
+    <PackageReference Include="SarcLibrary" Version="3.1.2" />
     <PackageReference Include="Standart.Hash.xxHash" Version="4.0.5" />
-    <PackageReference Include="Totk.Common" Version="1.1.1" />
+    <PackageReference Include="Totk.Common" Version="1.1.2" />
     <PackageReference Include="ZstdSharp.Port" Version="0.7.6" />
   </ItemGroup>
 
