--- a/src/MalsMerger.Core/MalsMerger.Core.csproj
+++ b/src/MalsMerger.Core/MalsMerger.Core.csproj
@@ -13,8 +13,9 @@
   <ItemGroup>
     <PackageReference Include="MessageStudio" Version="1.1.0" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.0" />
+    <PackageReference Include="SarcLibrary" Version="3.1.3" />
     <PackageReference Include="Standart.Hash.xxHash" Version="4.0.5" />
-    <PackageReference Include="TotkCommon" Version="1.2.0" />
+    <PackageReference Include="TotkCommon" Version="1.2.1" />
   </ItemGroup>
 
   <ItemGroup>
